--- a/components/dashboard/index.sass
+++ b/components/dashboard/index.sass
@@ -2,13 +2,6 @@
 @import "styles/base.sass";
 
 .dashboard
-  .navbar
-    border-top: 6px solid $blue
 
-    .navbar-brand .navbar-item
-      font-weight: 900
-      font-size: 1rem
-
-    .navbar-item
-      font-weight: 700
-      font-size: .75rem
+  #main.container
+    // padding-top: 1rem
