--- a/styles/base.sass
+++ b/styles/base.sass
@@ -25,5 +25,7 @@ $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
 
+$weight-black: 900
+
 // Import Bulma after we've overriden our variables
 @import "~bulma/sass/utilities/_all.sass";
