--- a/components/dashboard/RequestForm.sass
+++ b/components/dashboard/RequestForm.sass
@@ -30,3 +30,6 @@
       font-weight: $weight-black
       font-size: 1rem
       // text-transform: uppercase
+
+  *:not(label):not(button):not(h1)
+    font-size: 14px !important
